优化数据结构，实现部分UI功能

--- a/QtUI/CalibBoardStitcher.ui
+++ b/QtUI/CalibBoardStitcher.ui
@@ -51,7 +51,7 @@
        <number>5</number>
       </property>
       <item>
-       <widget class="QGraphicsView" name="mainGraphicView"/>
+       <widget class="QGraphicsView" name="mainGraphicsView"/>
       </item>
      </layout>
     </item>
